# mujoco_rl_inverse_pendolum

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_train.sh  build_and_visualize.sh
.devcontainer/: devcontainer.json
scripts/: train.sh  visualize.sh  wandb_daemon.py
src/inverse_pendolum_model/: config.json  robot.xml  scene.xml
src/inverse_pendolum_model/assets/: base.stl  guide.stl  pendolum.stl
src/model/: config.json  robot.xml
src/model/assets/: part_1.part  part_1.stl  part_1__2.part  part_1__2.stl
src/mujoco_rl/: CMakeLists.txt  package.xml
src/mujoco_rl/include/mujoco_rl/: sim.hpp
src/mujoco_rl/include/mujoco_rl_utils/: utils.hpp  wandb_logger.hpp
src/mujoco_rl/src/: main.cpp  sim.cpp  visualize.cpp
src/rl_controller/: CMakeLists.txt  package.xml
src/rl_controller/include/rl_controller/: controller.hpp  network.hpp
src/rl_controller/src/: controller.cpp  network.cpp
